Fixed overflow issue with new CKEditor styling.

--- a/src/rendering/src/assets/css/base/base.css
+++ b/src/rendering/src/assets/css/base/base.css
@@ -25,3 +25,5 @@ a:focus {
 
   line-height: 1;
 }
+
+.ck.ck-editor__editable_inline { overflow: inherit !important; }
